correcting captcha on mobile device

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2096,12 +2096,11 @@ font-size: 2rem;
     width: 80%;
 }
   #registration_form_captcha{
-    width:50vw;
-    height: 20vh;
+    transform: scale(2.5);
+    position: relative;
+    
   }
 
 
-  .g-recaptcha {
-    transform: scale(0.8); /* Réduire la taille du Captcha */
-}
+
   }
